# commitzilla

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-test.yml  publish.yml
commitzilla/: characters.py  config.py  cz_characters.json  main.py  prepare-commit-msg.py
