[tool.poetry]
name = "commitzilla"
version = "0.1.3"
description = "Make your commit messages helpful, for once"
authors = ["Scuffi <grawlixpvp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.5"
questionary = "^2.0.1"
keyring = "^25.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
commitzilla = "commitzilla.main:app"
czilla = "commitzilla.main:app"
